imagined single source to fetch referenceData. To check if this is adequate or not